# sar-auto-splitter

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: lib.rs
